# cgogn-light

./: CMakeLists.txt  README.TXT
include/Mesher/: simplifvoxmesh.hpp
include/Topology/generic/: cellmarker.h
